--- a/example/public/index.html
+++ b/example/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>commons-ui</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/rsuite-default.min.css">
   </head>
 
   <body>
